--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			fill up the cool form below or send an email to <span class="mail">bakumegusta@gmail.com</span> 
 			and ~let's chat.</p>
 
-			 <form name='contact'method="POST" data-netlify="true">
+			 <form name='contact' netlify>
 	              <div class="form-group">
 	                <label>Name: </label>
 	                <input class="form-control" type="text" name="name" value="">
