--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p class="myskill" >From India<i class="fas fa-map-marker-alt aboutmecon"></i></p>
 				<p class="myskill" >Gamer<i class="fas fa-gamepad aboutmecon"></i></p>
 				<p class="myskill" >Likes pizza<i class="fas fa-pizza-slice aboutmecon"></i></p>
-				<button class="snip1582">close</button>
+				<button class="snip1582 cross">close</button>
 	</div>
 
 		<!-- hobbies me -->
@@ -88,7 +88,7 @@
 				<p class="myskill" >gaming<i class="fas fa-gamepad aboutmecon"></i></p>
 				<p class="myskill" >cycling<i class="fas fa-biking aboutmecon"></i></p>
 				<p class="myskill" >hanging out with friends<i class="fas fa-user-friends aboutmecon"></i></p>
-				<button class="snip1582">close</button>
+				<button class="snip1582 cross">close</button>
 	</div>
 
 		<!-- contact me -->
@@ -101,17 +101,17 @@
 			 <form name='contact' netlify>
 	              <div class="form-group">
 	                <label>Name: </label>
-	                <input class="form-control" type="text" name="name" value="">
+	                <input class="form-control" type="text" name="name" value="" required>
 	              </div>
 	              <div class="form-group">
 	                <label>Email: </label>
-	                <input class="form-control" type="email" name="email" value="" >
+	                <input class="form-control" type="email" name="email" value="" required>
 	              </div>
 	              <div class="form-group">
 	                <label>Message: </label>
-	                <textarea class="form-control" name="message" value="" ></textarea>
+	                <textarea class="form-control" name="message" value="" required></textarea>
 	              </div>
-			<button class="snip1582">submit</button>
+				<button class="snip1582" type="submit" >submit</button>
 
 	           </form>		
 	</div>
