--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<title>My Portfolio</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
@@ -9,6 +10,9 @@
 	<link rel="stylesheet" href="main.css">
 </head>
 <body>
+	<audio id="sound">
+		<source src="soundclick.wav" type="audio/ogg">
+	  </audio>
 	<!-- Navbar-->
 <header class="header ">
     <nav class="navbar navbar-expand-lg  ">
@@ -17,7 +21,7 @@
     </nav>
         <nav class="navbar navbar-expand-lg ">
         <div class="container">
-                    <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right float-left"><i class="fa fa-bars"></i></button>
+                    <button type="button" id="navbtn"data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><i class="fa fa-bars"></i></button>
             <div id="navbarSupportedContent" class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-4">
                     <li class="nav-item "><a href="#" class="nav-link text-uppercase font-weight-bold active home">Home 
@@ -51,7 +55,7 @@
 		  </div>
 		  <div class=" dataright">
 			<div class="frontend">
-		  	<h6 class="datarighthead">My skills</h6>
+		  	<h6 class="datarighthead" style="font-weight:bolder;">My skills</h6>
 			<h4>frontend</h4>
 			    <p class="myskill">html5 <i class="fab fa-html5 fa-2x skillcon"></i></p>
 			    <p class="myskill">css3 <i class="fab fa-css3-alt fa-2x skillcon"></i></p>
@@ -70,7 +74,7 @@
 	</div>
 
 	<!-- about me -->
-	<div id="aboutme"class="aboutme" style="display: none;">		
+	<div id="aboutme"class="aboutme slideDown" style="display: none;">		
 				<h4>about me</h4>
 				<p class="myskill" >Fullstack developer <i class="fas fa-laptop-code aboutmecon"></i></p>
 				<p class="myskill" >reva university<i class="fas fa-user-graduate aboutmecon"></i></p>
@@ -81,7 +85,7 @@
 	</div>
 
 		<!-- hobbies me -->
-	<div id="hobbies" class="aboutme " style="display: none;">		
+	<div id="hobbies" class="aboutme slideDown" style="display: none;">		
 				<h4>me hobbies</h4>
 				<p class="myskill" >coding<i class="fas fa-code aboutmecon"></i></p>
 				<p class="myskill" >listening to music <i class="fas fa-music aboutmecon"></i></p>
@@ -92,8 +96,8 @@
 	</div>
 
 		<!-- contact me -->
-	<div id="contact" class="aboutme"style="display: none;">		
-			<h4>Contact me</h4>
+	<div id="contact" class="aboutme slideDown"style="display: none;">		
+			<h4>Contact me</h4> <span class="cross"><i class="fas fa-times-circle fa-2x contactcon"></i></span>
 			<p class="contactmehead" >If you wanna get in touch, talk to me about a project collaboration or just say hi,
 			fill up the cool form below or send an email to <span class="mail">bakumegusta@gmail.com</span> 
 			and ~let's chat.</p>
@@ -110,14 +114,18 @@
 	              <div class="form-group">
 	                <label>Message: </label>
 	                <textarea class="form-control" name="message" value="" required></textarea>
-	              </div>
-				<button class="snip1582" type="submit" >submit</button>
-
+				  </div>
+				  <div class="contacbtn">
+					<button class="snip1582 submit" type="submit" >submit</button>
+				  </div>
+				
 	           </form>		
 	</div>
 
 </div>
-
+<footer>
+	<h4 class="navbar-brand text-uppercase  mt-2">Bakumegusta</h4>
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js" integrity="sha256-+Q/z/qVOexByW1Wpv81lTLvntnZQVYppIL1lBdhtIq0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha256-OFRAJNoaD8L3Br5lglV7VyLRf0itmoBzWUoM+Sji4/8=" crossorigin="anonymous"></script>
