--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="main.css">
+	<style>
+        .icon{
+            position: absolute;
+            top: 20px;
+            right: 10px;
+            font-size: 25px;
+            color: white;
+        }
+        .widgeticon{
+            height: 80px;
+            width: 80px;
+            position: fixed;
+            right: 30px;
+            bottom: 20px;
+            cursor: pointer;
+        }
+        .widgetbody{
+            position: fixed;
+            display: none;
+            width: 350px;
+            height: 440px;
+            right: 20px;
+            bottom: 100px;
+        }
+        /* scrollbar */
+        ::-webkit-scrollbar {
+            width: 1px !important;
+        }
+ </style>
 </head>
 <body>
 	<audio id="sound">
@@ -126,9 +155,43 @@
 <footer>
 	<h4 class="navbar-brand text-uppercase  mt-2">Bakumegusta</h4>
 </footer>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/js/all.min.js" integrity="sha256-+Q/z/qVOexByW1Wpv81lTLvntnZQVYppIL1lBdhtIq0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha256-OFRAJNoaD8L3Br5lglV7VyLRf0itmoBzWUoM+Sji4/8=" crossorigin="anonymous"></script>
 <script src="main.js"></script>
+<script>
+	// create widget
+	var widgetIcon = document.createElement('img');
+	widgetIcon.setAttribute('class',"widgeticon");
+	widgetIcon.setAttribute('src',"https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512")
+	document.body.appendChild(widgetIcon);
+
+	// create chat body
+	var widgetbody = document.createElement('div');
+	widgetbody.setAttribute('class',"widgetbody");
+	widgetbody.innerHTML = `
+	<iframe src="https://icrewbot.herokuapp.com/"
+		   width="350" 
+		   height="560" frameBorder="0"/> 
+	
+	`;
+	document.body.appendChild(widgetbody);
+
+	// open chatbody on click
+	$('.widgeticon').on('click',()=>{
+		$('.widgetbody').show();
+	})
+	
+	// create minimize buttton
+	var icon = document.createElement('span');
+	icon.setAttribute('class',"icon");
+	icon.innerHTML=`<i class="fas fa-times-circle"></i>`;
+	widgetbody.prepend(icon);
+
+	$('.icon').on('click',()=>{
+		$('.widgetbody').hide();
+	})
+</script>
 </body>
 </html>
