--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
         /* scrollbar */
         ::-webkit-scrollbar {
             width: 1px !important;
+		}
+		@media only screen and (max-width: 600px) {
+            .widgetbody {
+                position: fixed;
+                display: none;
+                width: 314px;
+                height: 440px;
+                right: 20px;
+                bottom: 100px;
+            }
         }
  </style>
 </head>
