--- a/index.html
+++ b/index.html
@@ -114,18 +114,18 @@
 
 	<!-- about me -->
 	<div id="aboutme"class="aboutme slideDown" style="display: none;">		
-				<h4>about me</h4>
+				<h4>I am :-</h4>
 				<p class="myskill" >Fullstack developer <i class="fas fa-laptop-code aboutmecon"></i></p>
-				<p class="myskill" >reva university<i class="fas fa-user-graduate aboutmecon"></i></p>
+				<p class="myskill" >graduate from reva university<i class="fas fa-user-graduate aboutmecon"></i></p>
 				<p class="myskill" >From India<i class="fas fa-map-marker-alt aboutmecon"></i></p>
 				<p class="myskill" >Gamer<i class="fas fa-gamepad aboutmecon"></i></p>
-				<p class="myskill" >Likes pizza<i class="fas fa-pizza-slice aboutmecon"></i></p>
+				<p class="myskill" >pizza lover<i class="fas fa-pizza-slice aboutmecon"></i></p>
 				<button class="snip1582 cross">close</button>
 	</div>
 
 		<!-- hobbies me -->
 	<div id="hobbies" class="aboutme slideDown" style="display: none;">		
-				<h4>me hobbies</h4>
+				<h4>My hobbies are:-</h4>
 				<p class="myskill" >coding<i class="fas fa-code aboutmecon"></i></p>
 				<p class="myskill" >listening to music <i class="fas fa-music aboutmecon"></i></p>
 				<p class="myskill" >gaming<i class="fas fa-gamepad aboutmecon"></i></p>
