--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	var widgetbody = document.createElement('div');
 	widgetbody.setAttribute('class',"widgetbody");
 	widgetbody.innerHTML = `
-	<iframe src="https://icrewbot.herokuapp.com/"
+	<iframe src="https://bakubot.herokuapp.com/"
 		   width="350" 
 		   height="560" frameBorder="0"/> 
 	
