--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<style>
         .icon{
             position: absolute;
-            top: 20px;
+            top: 25px;
             right: 10px;
             font-size: 25px;
-            color: white;
+            color: 5bc2cc;
         }
         .widgeticon{
             height: 80px;
@@ -86,8 +86,8 @@
 					<p style="margin-left:25px;" class="text-uppercase text-small"> Click on below projects to see live.</p>
 				</div>
 				<a href="https://mycorona.netlify.app/" target="_blank"><p class="mywork" id="mycorona">mycorona<i class="fas fa-arrow-right  infocon"></i></p></a> 
-				<a href="https://icrewbot.herokuapp.com/" target="_blank"><p class="mywork" id="chatbot">chatbot <i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://icrewbot.herokuapp.com/dashboard" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)<i class="fas fa-arrow-right  infocon"></i></p></a>
+				<a href="https://bakubot.herokuapp.com/" target="_blank"><p class="mywork" id="chatbot">chatbot <i class="fas fa-arrow-right  infocon"></i></p></a>
+				<a href="https://bakubot.herokuapp.com/dashboard" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)<i class="fas fa-arrow-right  infocon"></i></p></a>
 				<a href="https://hofff.netlify.app/" target="_blank"><p class="mywork" id="hof">HOF(Ngo)<i class="fas fa-arrow-right  infocon"></i></p></a>
 				<a href="https://kgconverter.netlify.app/" target="_blank"><p class="mywork" id="weight">weight converter<i class="fas fa-arrow-right  infocon"></i></p></a>
 				<a href="https://askdoc.ai/" target="_blank"><p class="mywork" id="askdoc">askdoc.ai<i class="fas fa-arrow-right  infocon"></i></p></a>
