--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             top: 25px;
             right: 10px;
             font-size: 25px;
-            color: 5bc2cc;
+            color: #5bc2cc;
         }
         .widgeticon{
             height: 80px;
