--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             right: 10px;
             font-size: 25px;
             color: #5bc2cc;
+		}
+		.icon:hover{
+		cursor: pointer;
+		font-size: 30px;
         }
         .widgeticon{
             height: 80px;
