--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<style>
         .icon{
             position: absolute;
-            top: 25px;
+            top: 14px;
             right: 10px;
-            font-size: 14px;
+            font-size: 25px;
             color: #5bc2cc;
 		}
 		.icon:hover{
@@ -203,7 +203,7 @@
 	// create minimize buttton
 	var icon = document.createElement('span');
 	icon.setAttribute('class',"icon");
-	icon.innerHTML=`<i class="fas fa-times"></i>`;
+	icon.innerHTML=`<i class="fas fa-times-circle"></i>`;
 	widgetbody.prepend(icon);
 
 	$('.icon').on('click',()=>{
