--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         .icon{
             position: absolute;
             top: 14px;
-            right: 10px;
+            right: 20px;
             font-size: 25px;
             color: #5bc2cc;
 		}
@@ -22,11 +22,11 @@
 		font-size: 30px;
         }
         .widgeticon{
-            height: 80px;
-            width: 80px;
+            height: 100px;
+            width: 100px;
             position: fixed;
-            right: 30px;
-            bottom: 20px;
+            right: 0px;
+            bottom: 0px;
             cursor: pointer;
         }
         .widgetbody{
@@ -181,7 +181,7 @@
 	// create widget
 	var widgetIcon = document.createElement('img');
 	widgetIcon.setAttribute('class',"widgeticon");
-	widgetIcon.setAttribute('src',"https://www.freepngimg.com/save/62719-vector-end-icons-bot-chatbot-iconworkshop-axialis/512x512")
+	widgetIcon.setAttribute('src',"https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Chat-2-512.png")
 	document.body.appendChild(widgetIcon);
 
 	// create chat body
@@ -203,7 +203,7 @@
 	// create minimize buttton
 	var icon = document.createElement('span');
 	icon.setAttribute('class',"icon");
-	icon.innerHTML=`<i class="fas fa-times-circle"></i>`;
+	icon.innerHTML=`<i class="fas fa-chevron-down"></i>`;
 	widgetbody.prepend(icon);
 
 	$('.icon').on('click',()=>{
