--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
-    <meta name="description" content="Hi my name is Paikhomba singh , I am Fullstack Web Developer,">
+    <meta name="description" content="Hi! my name is Paikhomba singh , I am Fullstack Web Developer!">
     <meta name="author" content="bakumegusta">
-    <meta name="keywords" content="bakumegusta.tech. bakumegusta tech,mycorona,bakumegusta,tensubam, paikhomba singh,paikhomba,bakumegusta">
-	<title>My Portfolio| bakumegusta.tech</title>
+	<meta name="keywords" content="bakumegusta.tech, bakumegusta tech,bakumegusta,tensubam, paikhomba singh,
+	paikhomba,bakumegusta,tensubam paikhomba singh,baku megusta,web designer,web developer,web design,
+	app developer,software developer,freelancer,chatbot designer,chatbot design,bot,robot,chatbot development,chatbot for bussiness">
+
+	<title>Web Developer| bakumegusta.tech</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha256-aAr2Zpq8MZ+YA/D6JtRD3xtrwpEz2IqOS+pWD/7XKIw=" crossorigin="anonymous" />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
