--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 				</div>
 				<a href="https://mycorona.netlify.app/" target="_blank"><p class="mywork" id="mycorona">corona Dashboard<i class="fas fa-arrow-right  infocon"></i></p></a> 
 				<a href="https://bakubot.herokuapp.com/" target="_blank"><p class="mywork" id="chatbot">chatbot <i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://demodashboardbaku.netlify.com" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)<i class="fas fa-arrow-right  infocon"></i></p></a>
+				<a href="https://bakubot.herokuapp.com/dashboard/" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)<i class="fas fa-arrow-right  infocon"></i></p></a>
 				<a href="https://hofff.netlify.app/" target="_blank"><p class="mywork" id="hof">ngo website<i class="fas fa-arrow-right  infocon"></i></p></a>
 				<a href="https://kgconverter.netlify.app/" target="_blank"><p class="mywork" id="weight">weight converter<i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://askdoc.ai/" target="_blank"><p class="mywork" id="askdoc">internship project at corover<i class="fas fa-arrow-right  infocon"></i></p></a>
+				<a href="https://coronavirus.corover.mobi/" target="_blank"><p class="mywork" id="askdoc">internship project at corover<i class="fas fa-arrow-right  infocon"></i></p></a>
 		  </div>
 		  <div class=" dataright">
 			<div class="frontend">
