--- a/index.html
+++ b/index.html
@@ -97,12 +97,13 @@
 					<h4>My Works</h4>
 					<p style="margin-left:25px;" class="text-uppercase text-small"> Click on below projects to see live.</p>
 				</div>
-				<a href="https://mycorona.netlify.app/" target="_blank"><p class="mywork" id="mycorona">corona Dashboard<i class="fas fa-arrow-right  infocon"></i></p></a> 
-				<a href="https://bakubot.herokuapp.com/" target="_blank"><p class="mywork" id="chatbot">chatbot <i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://bakubot.herokuapp.com/dashboard/" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)<i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://hofff.netlify.app/" target="_blank"><p class="mywork" id="hof">ngo website<i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://kgconverter.netlify.app/" target="_blank"><p class="mywork" id="weight">weight converter<i class="fas fa-arrow-right  infocon"></i></p></a>
-				<a href="https://coronavirus.corover.mobi/" target="_blank"><p class="mywork" id="askdoc">internship project at corover<i class="fas fa-arrow-right  infocon"></i></p></a>
+				<a href="https://mycorona.netlify.app/" target="_blank"><p class="mywork" id="mycorona">corona Dashboard</p></a> 
+				<a href="https://bakubot.herokuapp.com/" target="_blank"><p class="mywork" id="chatbot">chatbot </p></a>
+				<a href="https://bakubot.herokuapp.com/dashboard/" target="_blank"><p class="mywork" id="chatbotdash">chatbot(dashboard)</p></a>
+				<a href="https://hofff.netlify.app/" target="_blank"><p class="mywork" id="hof">ngo website</p></a>
+				<a href="https://kgconverter.netlify.app/" target="_blank"><p class="mywork" id="weight">weight converter</p></a>
+				<a href="https://asksarkar.com/" target="_blank"><p class="mywork" id="askdoc">internship project at corover(1)</p></a>
+				<a href="https://coronavirus.corover.mobi/" target="_blank"><p class="mywork" id="askdoc">internship project at corover(2)</p></a>
 		  </div>
 		  <div class=" dataright">
 			<div class="frontend">
